syntax = "proto3";

package kvraftpb;

message PutAppendReply {
    bool is_leader = 1;
    string err = 2;
}
message PutAppendArgs {
    CommandId command_id = 1;
    PutAppendCommand command = 2;
}

message PutAppendCommand {
    string key = 1;
    string value = 2;

    bool append = 3;
}

message CommandId {
    string clerk_id = 1;
    uint64 clerk_seq = 2;
}

message GetReply {
    bool is_leader = 1;
    string err = 2;
    string value = 3;
}

message GetArgs {
    CommandId command_id = 1;
    GetCommand command = 2;
}

message GetCommand {
    string key  = 1;
}
